# makeitup

./: CLAUDE.md  DEVELOPER.md  README.md  VERIFICATION_PLAN.md  agent.py  config.py  logging_config.py  main.py  pyproject.toml  test_generator.py
.github/workflows/: publish.yml
examples/: related_tables.md
src/data_generation/: __init__.py  __main__.py  api.py  cli.py  config.py
src/data_generation/core/: __init__.py  agent.py  generator.py  output_formats.py  quality.py  target_generation.py
src/data_generation/tools/: __init__.py  data_generation.py  schema_inference.py  schema_validation.py
src/data_generation/utils/: logging.py
src/makeitup/: __init__.py
src/makeitup/core/: generator.py
tests/: test_api.py  test_generator.py  test_ml_validation.py  test_model_training.py  test_output_formats.py  test_quality_validation.py  test_reproducibility.py  test_schema_validation.py  test_statistical_validation.py  test_target_generation.py
tools/: generator.py  schema_inference.py  schema_validation.py
