[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "makeitup"
version = "0.1.0"
description = "LLM-based synthetic dataset generation"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Tomek Kopczynski", email = "wonsek@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",  # For Parquet format support
    "openpyxl>=3.1.0",  # For Excel format support
]

[project.urls]
Homepage = "https://github.com/tkopczynski/makeitup"
Repository = "https://github.com/tkopczynski/makeitup"
Issues = "https://github.com/tkopczynski/makeitup/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "scikit-learn>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["makeitup"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require OPENAI_API_KEY)",
]
